--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -37,7 +37,7 @@
 
         <div class="btn-group my-3">
           <%= link_to "Back", posts_path, class: 'btn btn-primary mx-1 rounded' %>
-          <% if user_signed_in && (current_user.id == @post.user_id) %>
+          <% if user_signed_in? && (current_user.id == @post.user_id) %>
             <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-warning mx-1 rounded' %>
             <%= link_to "Delete", @post, method: :delete, data: {confirm: "Are you sure that you want to delete this Post?"}, class: 'btn btn-danger mx-1 rounded' %>
           <% end %>
