--- a/app/views/home/_carrousel.html.erb
+++ b/app/views/home/_carrousel.html.erb
@@ -39,6 +39,17 @@
   </div>
 </div>
 
+
+
+<div class="first-row main-article col-12 p-0" style="background-image: url(<%= (url_for(most_voted.image)) %>)">
+    <div class="cover-gradient p-4 d-flex flex-column justify-content-end">
+        <p class="main-title text_orange text-right text-uppercase"> <%= @most_voted.title %> </p> 
+        <p class = "article_text text-right text-white"> <%= truncate("#{@most_voted.text}", :length => 135) %> </p>
+    </div>
+</div>
+
+
+
 <div class="container-fluid px-0 ">
   <div class="container-fluid px-0 d-flex">
     <div class="container col-3 px-0">
